Alignment fixes on large devices

--- a/src/component/DynamicContent/DynamicContent.style.scss
+++ b/src/component/DynamicContent/DynamicContent.style.scss
@@ -6,5 +6,6 @@
     margin-left: auto;
     margin-right: auto;
     width: var(--main-container-width-dsk);
+    max-width: 1440px;
   }
 }
