--- a/src/component/DynamicContentCircleItemSlider/DynamicContentCircleItemSlider.style.scss
+++ b/src/component/DynamicContentCircleItemSlider/DynamicContentCircleItemSlider.style.scss
@@ -25,6 +25,7 @@
   }
   .CircleSliderWrapper {
     display: flex;
+    justify-content: center;
     overflow-x: auto;
     .CircleItemHelper {
       display: none;
@@ -70,7 +71,7 @@
 
     .CircleSlider {
       margin-right: 15px;
-      width: 100%;
+      // width: 100%;
 
       &_isArabic {
         margin-right: 0;
