--- a/src/component/DynamicContentSliderWithLabel/DynamicContentSliderWithLabel.style.scss
+++ b/src/component/DynamicContentSliderWithLabel/DynamicContentSliderWithLabel.style.scss
@@ -20,7 +20,7 @@
     overflow-x: auto;
     scroll-behavior: auto;
     scrollbar-width: none; /* Firefox */
-
+    text-align-last: start;
     &::-webkit-scrollbar {
       height: 4px;
       border: 1px solid #d5d5d5;
@@ -56,7 +56,8 @@
     }
   }
   .Image {
-    min-width: 16.97vw;
+    // min-width: 16.97vw;
+    min-width: 238px;
     width: 100%;
     height: 100%;
     object-fit: cover;
