--- a/src/component/HeaderMainSection/HeaderMainSection.style.scss
+++ b/src/component/HeaderMainSection/HeaderMainSection.style.scss
@@ -17,7 +17,7 @@ main {
   flex-direction: row;
   align-items: center;
   height: 60px;
-  max-width: 1470px;
+  max-width: 1440px;
   margin: 0 auto;
 
   @include mobile {
